--- a/src/shared/styles/_global.scss
+++ b/src/shared/styles/_global.scss
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap");
+@import "./_variables";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  color: $text-color;
+}
