Update box-sizing property

--- a/src/shared/styles/_global.scss
+++ b/src/shared/styles/_global.scss
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  color: $text-color;
+* {
+  box-sizing: border-box;
+
+  html {
+    color: $text-color;
+  }
 }
