Add overlay scrollbar and styling updates

--- a/src/modules/auth/login/login.component.scss
+++ b/src/modules/auth/login/login.component.scss
@@ -1,14 +1,11 @@
 @import "../../../shared/styles/_variables";
 
-
-#logo-container {  
-  #logo {
+.login-wrapper {
+  .logo {
     font-family: $fredericko-font;
   }
-}
 
-#description-container {
-  #description {
+  .description {
     width: 75ch;
   }
 }
