Minor styling updates

--- a/src/modules/auth/login/login.component.scss
+++ b/src/modules/auth/login/login.component.scss
@@ -1,11 +1,11 @@
 @import "../../../shared/styles/_variables";
 
 .login-wrapper {
-  .logo {
+  #logo {
     font-family: $fredericko-font;
   }
 
-  .description {
+  #description {
     width: 75ch;
   }
 }
