--- a/src/shared/components/background/background.component.scss
+++ b/src/shared/components/background/background.component.scss
@@ -1,5 +1,5 @@
 .background-wrapper {
-  .backdrop #image-container::before {
+  &.backdrop #image-container::before {
     position: absolute;
     top: 0;
     left: 0;
