--- a/src/shared/components/side-nav/side-nav.component.scss
+++ b/src/shared/components/side-nav/side-nav.component.scss
@@ -1,10 +1,20 @@
 .side-nav-container {
+  .active-background {
+    transition: top 200ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: rgba(7, 123, 7, 0.83);
+  }
+
   .nav-item {
+    background-color: transparent;
+
+    .item-content {
+      transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
     &.active {
       pointer-events: none;
 
       .item-content {
-        background-color: rgba(7, 123, 7, 0.83);
         color: white;
       }
     }
